WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226002
[Table] Incorrect distributed height when <td> height is set
https://bugs.webkit.org/show_bug.cgi?id=226002
Summary
[Table] Incorrect distributed height when <td> height is set
alan
Reported
2021-05-19 20:51:32 PDT
Created
attachment 429129
[details]
Test case These 2 tables should produce the same height.
Attachments
Test case
(167 bytes, text/html)
2021-05-19 20:51 PDT
,
alan
no flags
Details
Patch
(14.55 KB, patch)
2026-04-10 07:28 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(39.15 KB, patch)
2026-04-10 14:08 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(63.52 KB, patch)
2026-04-10 19:23 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(94.57 KB, patch)
2026-04-11 05:23 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(86.16 KB, patch)
2026-04-11 08:24 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-05-26 20:52:15 PDT
<
rdar://problem/78549188
>
Ahmad Saleem
Comment 2
2026-02-27 08:11:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59578
alan
Comment 3
2026-04-10 07:28:23 PDT
Created
attachment 478994
[details]
Patch
alan
Comment 4
2026-04-10 14:08:53 PDT
Created
attachment 478999
[details]
Patch
alan
Comment 5
2026-04-10 19:23:57 PDT
Created
attachment 479005
[details]
Patch
Ahmad Saleem
Comment 6
2026-04-10 20:31:19 PDT
Lovely new tests. AWESOME!!
alan
Comment 7
2026-04-11 05:23:55 PDT
Created
attachment 479014
[details]
Patch
alan
Comment 8
2026-04-11 08:24:09 PDT
Created
attachment 479017
[details]
[fast-cq]Patch
EWS
Comment 9
2026-04-11 10:15:09 PDT
Committed
311001@main
(11fb868d279a): <
https://commits.webkit.org/311001@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479017
[details]
.
Karl Dubost
Comment 10
2026-04-27 22:50:30 PDT
***
Bug 311064
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug