[Table] Table does not reach CSS specified height when <td> has HTML height attribute https://bugs.webkit.org/show_bug.cgi?id=226002 rdar://78549188

Reviewed by NOBODY (OOPS!).

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

When a table has a CSS height (e.g. 100px) and contains a <td height=1px>,
the table renders shorter than specified. This is because
distributeRemainingExtraLogicalHeight() uses m_rowPos[totalRows] as the
denominator for proportional distribution, but this includes the initial
border-spacing stored in m_rowPos[0]. The result is that a fraction of the
extra height is never distributed.

Fix by subtracting m_rowPos[0] from the denominator so proportional
distribution is based on actual row sizes. The code already had a FIXME
comment identifying this exact issue.

* LayoutTests/platform/mac/tables/mozilla/bugs/bug120364-expected.txt:
* LayoutTests/platform/mac/tables/mozilla/core/cell_heights-expected.txt:
* Source/WebCore/rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::distributeRemainingExtraLogicalHeight):